folio-dev/scriptshifter/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: scriptshifter
  labels:
    app: scriptshifter
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
  selector:
    app: scriptshifter
