folio-dev/scriptshifter/manifests/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: scriptshifter
  labels:
    app: scriptshifter
spec:
  hostnames:
  - scriptshifter-folio-dev.stanford.edu
  parentRefs:
  - name: default
    namespace: envoy-gateway-system
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: scriptshifter
      port: 80
      weight: 1
